# prediction

./: .env.example  .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml
predict/: models.py  urls.py  views.py
predict/migrations/: 0001_initial.py
predict/serializer/: prediction.py
prediction/: asgi.py  pagination.py  permissions.py  settings.py  urls.py  views.py  wsgi.py
prediction/serializer/: history.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/serializer/: token.py  users.py
